--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,118 +1,127 @@
 body {
-	height: 100%;
+  height: 100%;
+  background: #D9D0C3;
 }
 
-/*title*/
+
+/*//////////////////////////HEADER*/
+
 header {
-	height: 25%;
-	overflow: auto;
+  height: 20%;
+  overflow: auto;
+  margin-left: 10%;
+  margin-right: 10%;
 }
+
+h1 {
+  font-size: 150%;
+  margin-left: 70%;
+}
+
+
+/*//////////////////TOP IMAGES*/
 
 div {
-	float: left;}
-
-.images {width: 130px;
-		height: 65%;
-
+  float: left;
 }
-img {margin-left: 10%;}
 
-figcaption{width: 100%;text-align:center;}
-
-/*.bart, .death {
-	
-	border: 1px solid black;
-	float: left;
-
+.images {
+  width: 130px;
+  height: 65%;
+  mix-blend-mode: multiply;
 }
-*/
 
-
-h1{
-	
-	margin-left: 70%;
+img {
+  margin-left: 10%;
 }
+
+figcaption {
+  width: 100%;
+  text-align: center;
+}
+
 
 /*section headers*/
 
+#main {
+  margin-left: 10%;
+  margin-right: 10%;
+}
+
 h2 {
-	/*position: absolute;*/
-	/*display: block;*/
-	/*margin-left: 5%;*/
-	/*margin-top:10%*/
-	color: green;
-	/*width: 35%;*/
+  font-size: 150%;
 }
 
-#container {overflow:auto;}
-#left {width:67%;
-
-	float:left;}
-
-	#right {
-		width: 30%;
-		float:left;
-	}
-
-
-/*row 1*/
-
-
-.bart .death {
-	height: 160px;
-	border: 1px solid black;
+#container {
+  overflow: auto;
 }
+
+#left {
+  width: 67%;
+  float: left;
+}
+
+#right {
+  width: 30%;
+  float: left;
+}
+
+#result {
+  height: 10%;
+  font-size: 150%;
+  text-align: center;
+  margin-top: 15%;
+}
+
+
+/*/*row 1*/
 
 #you-image {
-	height: 170px;
-	border: 1px solid black;
+  height: 150px;
+  border: 1px solid black;
 }
 
 #you {
-	font-size: 200%;
-	color:green;
-	margin-top: 1%;
-	border: 1px solid black;
+  font-size: 150%;
+  text-align: center;
+  margin-top: 1%;
+  border: 1px solid black;
 }
+
+
 /*row 2*/
+
 #opponent-image {
-	height: 160px;	
-	border: 1px solid black;
+  height: 130px;
+  border: 1px solid black;
 }
+
 #opponent {
-	margin-top: 1%;
-	font-size: 200%;
-	color:green;
-	border: 1px solid black;
+  margin-top: 1%;
+  font-size: 130%;
+  text-align: center;
+  border: 1px solid black;
 }
 
 #remainder-image {
-	height: 160px;	
-	border: 1px solid black;
-}
-#remainder {
-	margin-top: 1%;
-	font-size: 200%;
-	color:green;
-	border: 1px solid black;
+  height: 130px;
+  border: 1px solid black;
 }
 
-section {
-	/*overflow:auto;*/
-	border: 1px solid black;
-}
-#results {
-	font-size: 120%;
-}
-#end {
-	height: 10%;
-	/*width: 15%;*/
-	/*margin-top: 15%;*/
-	/*display:inline-block;*/
-	border: 1px solid black;
+#remainder {
+  margin-top: 1%;
+  font-size: 150%;
+  text-align: center;
+  border: 1px solid black;
 }
 
 button {
-	border: 1px solid black;
+  background: #4A4042;
+  border-radius: 25px;
+  color: #D9D0C3;
+  display: block;
+  margin: 20px auto;
+  padding: 30px;
+  border: 1px solid black;
+  font-size: 150%;
 }
-
